Fix the controls jumping a bit upon the first tab switch

--- a/web-server/chart-rendering/client/app/index.css
+++ b/web-server/chart-rendering/client/app/index.css
@@ -91,21 +91,20 @@ label {
 
 .canvas-container {
     flex: 3;
+    min-width: 650px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
 .chart-canvas {
-    min-width: 400px;
+    min-width: 65%;
     max-width: 65%;
     max-height: 100%;
     margin-right: 10px;
 }
 
 .controls-container {
-    flex: 1;
-    min-width: 250px;
     max-width: 35%;
     display: flex;
     flex-direction: column;
